[package]
name = "noisy"
description = "A procedural noise generation library written for Rust."
documentation = "http://www.rust-ci.org/cacteye/noisy/doc/noisy/"
homepage = "https://github.com/cacteye/noisy"
repository = "https://github.com/cacteye/noisy"
readme = "README.md"
version = "0.0.3"
license = "Unlicense"
keywords = ["noise", "procedural", "coherent", "random"]
authors = ["Peter Nguyen <peter.hieu.nguyen@gmail.com>"]

[lib]
name = "noisy"
path = "src/lib.rs"

[[example]]
name = "checkerboard1d"

[[example]]
name = "checkerboard2d"

[[example]]
name = "simplex1d"

[[example]]
name = "simplex2d"

[[example]]
name = "fromseed"
